--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,83 +1,78 @@
-
-
 <div id="wrapper" class="flex flex-col h-full overflow-hidden">
 
-  <header class="flex items-center w-full h-10 bg-slate-600 ">
-      <div class=" flex-grow flex items-center ">
-          <div class=" flex items-center px-2 ">
+    <header class="flex items-center w-full h-10 bg-slate-600 ">
+        <div class=" flex-grow flex items-center ">
+            <div class=" flex items-center px-2 ">
+                <div class="grid-icon group cursor-pointer" routerLink="/">
+                    <div class="grid-item group-hover:bg-slate-300"></div>
+                    <div class="grid-item group-hover:bg-slate-300"></div>
+                    <div class="grid-item group-hover:bg-slate-300"></div>
+                    <div class="grid-item group-hover:bg-slate-300"></div>
+                    <div class="grid-item group-hover:bg-slate-300"></div>
+                    <div class="grid-item group-hover:bg-slate-300"></div>
+                    <div class="grid-item group-hover:bg-slate-300"></div>
+                    <div class="grid-item group-hover:bg-slate-300"></div>
+                    <div class="grid-item group-hover:bg-slate-300"></div>
+                </div>
+                <span class="text-xl px-2 text-white">Yükseliş Asansör</span>
+            </div>
+            <div class="w-2/3 px-5 flex justify-around">
+                <div class="relative w-full">
+                    <input class="w-full  pl-11 p-[0.3rem] bg-slate-500 opacity-85  outline-none"
+                        style="padding-left: 48px !important;" type="text" />
+                    <span class="absolute top-0 left-0 w-11 h-full 
+                                 flex items-center px-2.5 text-xl bg-slate-500 opacity-85 hover:cursor-pointer hover:bg-slate-400">
+                        <i class="fa-solid fa-magnifying-glass"></i></span>
+                </div>
 
-              <div class="grid-icon group cursor-pointer" routerLink="/">
-                  <div class="grid-item group-hover:bg-slate-300"></div>
-                  <div class="grid-item group-hover:bg-slate-300"></div>
-                  <div class="grid-item group-hover:bg-slate-300"></div>
-                  <div class="grid-item group-hover:bg-slate-300"></div>
-                  <div class="grid-item group-hover:bg-slate-300"></div>
-                  <div class="grid-item group-hover:bg-slate-300"></div>
-                  <div class="grid-item group-hover:bg-slate-300"></div>
-                  <div class="grid-item group-hover:bg-slate-300"></div>
-                  <div class="grid-item group-hover:bg-slate-300"></div>
-              </div>
-              <span class="text-xl px-2 text-white">Yükseliş Asansör</span>
+            </div>
 
-          </div>
-          <div class="w-2/3  px-5 flex justify-around ">
+        </div>
 
-              <div class="relative w-full">
-                  <input class="w-full  pl-11 p-3 bg-slate-500 opacity-85  outline-none"
-                      style="padding-left: 48px !important;" type="text" />
-                  <span
-                      class="absolute top-0 left-0 w-11 h-full flex items-center px-2.5 text-xl bg-slate-500 opacity-85 hover:cursor-pointer hover:bg-slate-400">
-                      <i class="fa-solid fa-magnifying-glass"></i></span>
-              </div>
+        <div class="flex flex-col px-2">
 
-          </div>
+        </div>
 
-      </div>
+        <div class="portHeadLightMenu"
+            style="display: flex;align-items: center;justify-content: center; margin: 0 20px;">
+            <ul style="display: flex; position: relative;">
 
-      <div class="flex flex-col px-2">
-          
-      </div>
+                <li>
+                    <a style="cursor: pointer;">
+                        <i class="fa-regular fa-user text-2xl text-white p-2 hover:bg-slate-500"></i>
+                    </a>
 
-      <div class="portHeadLightMenu"
-          style="display: flex;align-items: center;justify-content: center; margin: 0 20px;">
-          <ul style="display: flex; position: relative;">
+                </li>
+                <li>
+                    <a (click)="show()" style="cursor: pointer;">
+                        <i class="fa-solid fa-gear text-2xl text-white p-2 hover:bg-slate-500"></i>
+                    </a>
+                    <ul [ngClass]="{ 'show': isDropdownOpen }">
+                        <li class="hover:bg-slate-500 p-1 px-2">
+                            <a class=" text-white">Yönetim</a>
+                        </li>
+                        <li class="hover:bg-slate-500 p-1 px-2" (click)="cikis()">
+                            <a class=" text-white">Çıkış</a>
 
-              <li>
-                  <a style="cursor: pointer;">
-                      <i class="fa-regular fa-user text-2xl text-white p-2 hover:bg-slate-500"></i>
-                  </a>
-
-              </li>
-              <li>
-                  <a (click)="show()" style="cursor: pointer;">
-                      <i class="fa-solid fa-gear text-2xl text-white p-2 hover:bg-slate-500"></i>
-                  </a>
-                  <ul [ngClass]="{ 'show': isDropdownOpen }">
-                      <li class="hover:bg-slate-500 p-1 px-2"  >
-                          <a class=" text-white">Yönetim</a>
-                      </li>
-                      <li class="hover:bg-slate-500 p-1 px-2" (click)="cikis()">
-                          <a class=" text-white">Çıkış</a>
-
-                      </li>
-                  </ul>
-              </li>
-          </ul>
-      </div>
-  </header>
-  <div id="page-wrapper" class="gray-bg w-full p-0 " style="height: calc(100vh - 40px) !important;">
-      <div class="wrapper wrapper-content w-full flex p-0 m-0" style="height: 100%">
-          <div class="w-20 h-full bg-slate-50 z-[2]" style="border-right: 1px solid rgba(0, 0, 0, 0.06);">
-              <div class=" flex items-center flex-col">
+                        </li>
+                    </ul>
+                </li>
+            </ul>
+        </div>
+    </header>
+    <div id="page-wrapper" class="gray-bg w-full p-0 " style="height: calc(100vh - 40px) !important;">
+        <div class="wrapper wrapper-content w-full flex p-0 m-0" style="height: 100%">
+            <div class="w-20 h-full bg-slate-50 z-[2]" style="border-right: 1px solid rgba(0, 0, 0, 0.06);">
+                <div class=" flex items-center flex-col">
 
 
-                  <ng-container *ngFor="let item of moduls">
-                      <a [class.disabled]="item.disabled" routerLink="{{item.href}}"
-                          class="flex flex-col w-full py-1 items-center cursor-pointer hover:bg-slate-200 group text-center">
-                          <i class="{{item.icon}} " [ngClass]="item.class"></i>
-                          <span class="text-slate-600  font-bold">{{item.modul}}</span>
-                      </a>
-                  </ng-container>
+                    <ng-container *ngFor="let item of moduls">
+                        <a [class.disabled]="item.disabled" routerLink="{{item.href}}"
+                            class="flex flex-col w-full py-1 items-center cursor-pointer hover:bg-slate-200 group text-center">
+                            <i class="{{item.icon}} " [ngClass]="item.class"></i>
+                            <span class="text-slate-600  font-bold">{{item.modul}}</span>
+                        </a>
+                    </ng-container>
 
 
 
@@ -85,29 +80,29 @@
 
 
 
-              </div>
+                </div>
 
-          </div>
-          <div class="flex flex-col w-full">
-
-
-
-              <div class="border-b-gray-50 arka-plan">
-
-                  <ol class="breadcrumb h-8 flex items-center border-b-2 bg-transparent">
+            </div>
+            <div class="flex flex-col w-full">
 
 
 
+                <div class="border-b-gray-50 arka-plan">
+
+                    <ol class="breadcrumb h-8 flex items-center border-b-2 bg-transparent">
 
 
-                  </ol>
-              </div>
-          
-       
-               <router-outlet></router-outlet>
 
 
-          </div>
-      </div>
-  </div>
+
+                    </ol>
+                </div>
+
+
+                <router-outlet></router-outlet>
+
+
+            </div>
+        </div>
+    </div>
 </div>
