--- a/src/app/pages/tanimlar/personel/personel.component.html
+++ b/src/app/pages/tanimlar/personel/personel.component.html
@@ -1,7 +1,7 @@
 
 
 
-<stok-tanimlar-design>
+<personel-tanimlar-design>
 
 
 
@@ -25,7 +25,7 @@
         </div>
   
         <div  class="button-grup"
-        [ngClass]="buttonDisabled?'disabled':'' " [ngClass]="buttonUpdateDisabled?'disabled':''">
+          [ngClass]="buttonDisabled?'disabled':'' " [ngClass]="buttonUpdateDisabled?'disabled':''">
           <div class="img-container">
             <img src="../../../../../assets/icons/edit-file.png" alt="">
           </div>
@@ -110,4 +110,4 @@
     </div>
   
   
-  </stok-tanimlar-design>
+  </personel-tanimlar-design>
